remove unused path variables
